[gd_scene load_steps=4 format=3 uid="uid://b3qnde4i8xohn"]

[ext_resource type="Script" path="res://boss/lava chicken.gd" id="1_06ov2"]
[ext_resource type="Texture2D" uid="uid://bhopfoj27p5pk" path="res://boss/мясо (3).png" id="1_43n7w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubgo8"]
size = Vector2(46, 84)

[node name="LavaChicken" type="Node2D"]
texture_filter = 1
scale = Vector2(0.5, 0.5)
script = ExtResource("1_06ov2")
speed = 10

[node name="Мясо(3)" type="Sprite2D" parent="."]
position = Vector2(2, -44)
scale = Vector2(3, 3)
texture = ExtResource("1_43n7w")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -44)
shape = SubResource("RectangleShape2D_ubgo8")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(2, -44)
shape = SubResource("RectangleShape2D_ubgo8")

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(2, -44)
shape = SubResource("RectangleShape2D_ubgo8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
